# technopark_c-cpp_2019

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  test.c
ci/travis/: install-linux
task_01/: CMakeLists.txt  in_0.txt  main.c  main.cpp  main.h  makefile  struct.c  struct.cpp  struct.h  struct.hpp  struct_io.c  struct_io.h  test.cpp
task_02/: CMakeLists.txt  create_file.cpp  err_codes.cpp  err_codes.h  in_1.txt  in_2.txt  main.c  main.cpp  makefile  parallel_work.cpp  parallel_work.h  serial_work.c  serial_work.cpp  serial_work.h  string_work.c  string_work.h  test.cpp  time.cpp
task_02/data/: in_1.txt  in_2.txt  in_4.txt
task_02/dynamic_library/: main.c  makefile  parallel_work.c  parallel_work.h  serial_work.c  serial_work.h
task_02/dynamic_library/data/: in_1.txt  in_3.txt
